@@ -12,6 +12,7 @@ main
 
 * Non-spherical OMs data structures for clsim (#3520)
 * Rename I3MT19937 to I3MTRandomService (#3633)
+* Add Integer32 to I3RandomService to ensure 32-bit random numbers are correct(#3642)
 * Update simprod-scripts to I3MTRandomService and fix shell script tests so failures are caught (#3631)
 
 June 18, 2024 don la dieu (nega at icecube.umd.edu)
